# ai_squad

./: README.md
squad1/: pyproject.toml
squad1/squad1/: agents.py  main.py  tasks.py
