[tool.poetry]
name = "squad1"
version = "0.1.0"
description = ""
authors = ["leonardogonfiantini <lp.gonfiantini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.11.2"
duckduckgo-search = "^4.4.3"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
